{
    "name": "RobotControls 1",
    "maps": [
        {
            "name": "Ring",
            "id": "202185ec-409f-4e86-9dca-b339eb83112c",
            "actions": [
                {
                    "name": "Jab",
                    "type": "Button",
                    "id": "033c53ad-7841-4a27-8a72-bf58ebb2618a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "f622e724-bfb4-4dc0-ba2e-c829e135ec14",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightDirect",
                    "type": "Button",
                    "id": "8a3d1c9e-6f45-4091-b0cd-6772630a27d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeLeft",
                    "type": "Button",
                    "id": "b18523cb-e839-46a3-ad37-992d28256658",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DodgeRight",
                    "type": "Button",
                    "id": "6c1bd718-d4ce-4bf6-a9ec-f583edad9679",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3b0b29c3-6968-4f56-89a4-c343673db4d0",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "671dce74-db63-4ac3-a6b8-3eb5eb7b9d08",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6f488bf-fd66-4b9f-bbd8-f483e046bf75",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91adef3a-a7a0-4b05-984d-f420c4dd2ed0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c888b86-c948-4651-b1c2-85e622fd1afb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDirect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3df7fc53-4d73-4b38-ae19-afe63bd9fc68",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightDirect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e329a5d1-a313-4eb8-8acf-d4681c517532",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39f1ea55-e50b-4bae-bbfd-ca396084cef0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bed94b9-8ba7-4899-bcde-3d5c7ebf905c",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82591640-5555-488f-87f4-9df9a2b57181",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DodgeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}